editor-plugins/tree-sitter-newtonscript/grammar.js
/**
 * @file NewtonScript grammar for tree-sitter
 *
 * Written from the Newton's own compiler as the reconstruction has it:
 * the tokens from TCompiler::yylex0/GetNumber/GetCharsUntil
 * (src/frames/Lexer.cpp), the rules from the ROM's yacc grammar
 * (docs/frames/grammar.md, generated by analysis/nsgrammar.py from the
 * 2.1 ROM's yyrule table) and the precedences from its tables.
 *
 * Where the two differ from what an editor wants, the editor wins in one
 * direction only: this grammar accepts everything the compiler accepts,
 * and is a little more lenient (a type before any local, not only the
 * first; a reserved word's case is ignored, as the compiler ignores it).
 */

/* eslint-disable arrow-parens */
/* eslint-disable camelcase */
/* eslint-disable-next-line spaced-comment */
/// <reference types="tree-sitter-cli/dsl" />
// @ts-check

// Precedence, lowest first: the operator table of the NewtonScript
// Reference, which the ROM's yacc tables agree with.
const PREC = {
  BODY: 0, // if/while/func/... bodies: as far right as they go
  ASSIGN: 1, // :=, right-associative
  LOGICAL: 2, // and, or
  NOT: 3, // not
  COMPARE: 4, // < > <= >= = <>
  CONCAT: 5, // & &&
  ADD: 6, // + -
  MULTIPLY: 7, // * / div mod
  SHIFT: 8, // << >>
  UNARY: 9, // unary -
  EXISTS: 10, // exists
  ACCESS: 11, // . [] : and calls
};

// A reserved word, compared as the compiler compares symbols: without
// regard to case (TCompiler::ReservedWordToken uses symcmp).
function kw(word) {
  const pattern = word
    .split('')
    .map(c => /[a-z]/.test(c) ? `[${c}${c.toUpperCase()}]` : c)
    .join('');
  return alias(token(prec(1, new RegExp(pattern))), word);
}

function commaSep(rule) {
  return optional(commaSep1(rule));
}

// A list in brackets or braces: the compiler drops a comma before ] or }
// and a semicolon before ), ], } or a comma (TCompiler::GetToken).
function listOf(rule, trailingComma) {
  const item = seq(rule, optional(';'));
  return optional(seq(item, repeat(seq(',', item)), trailingComma ? optional(',') : seq()));
}

function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}

// A sequence of expressions separated by semicolons.  The compiler drops
// a semicolon before end, else, until, onexception, a closing bracket or
// a comma (TCompiler::GetToken), so a trailing one is always allowed.
function semiSep(rule) {
  return optional(seq(rule, repeat(seq(';', rule)), optional(';')));
}

module.exports = grammar({
  name: 'newtonscript',

  extras: $ => [
    /\s/,
    $.comment,
    $.line_directive,
  ],

  word: $ => $.identifier,

  conflicts: $ => [
    // [sym: ...] is an array of class sym; yacc shifts the ':', so
    // [x:y(1)] is an array of class x rather than a send to x.
    [$._expression, $.array],
  ],

  rules: {
    // romsrc's files hold several records, each a "@@ ..." line and
    // its source (tools/newton-rom/analysis/romsrc.py)
    source_file: $ => seq(
      semiSep($._command),
      repeat(seq($.record_marker, semiSep($._command))),
    ),

    _command: $ => choice(
      $._expression,
      $.global_declaration,
      $.function_declaration,
    ),

    // ---------------------------------------------------------------
    // Declarations (top level only)

    global_declaration: $ => choice(
      seq(kw('global'), field('name', $.identifier)),
      seq(kw('global'), field('name', $.identifier), ':=', field('value', $._expression)),
      prec.right(PREC.BODY, seq(
        kw('global'),
        field('name', $.identifier),
        field('parameters', $.parameter_list),
        field('body', $._expression),
      )),
    ),

    function_declaration: $ => prec.right(PREC.BODY, seq(
      kw('func'),
      field('name', $.identifier),
      field('parameters', $.parameter_list),
      field('body', $._expression),
    )),

    // ---------------------------------------------------------------
    // Expressions

    _expression: $ => choice(
      $._literal,
      $.identifier,
      $.self,
      $.member_expression,
      $.index_expression,
      $.assignment,
      $.block,
      $.parenthesized_expression,
      $.binary_expression,
      $.unary_expression,
      $.exists_expression,
      $.call_expression,
      $.call_with_expression,
      $.send_expression,
      $.if_expression,
      $.loop_expression,
      $.for_expression,
      $.foreach_expression,
      $.while_expression,
      $.repeat_expression,
      $.function,
      $.try_expression,
      $.array,
      $.frame,
      $.local_declaration,
      $.constant_declaration,
      $.break_expression,
      $.return_expression,
    ),

    self: _ => kw('self'),

    block: $ => seq(kw('begin'), semiSep($._expression), kw('end')),

    parenthesized_expression: $ => seq('(', $._expression, ')'),

    member_expression: $ => prec(PREC.ACCESS, seq(
      field('object', $._expression),
      '.',
      choice(
        field('slot', alias($.identifier, $.slot_name)),
        seq('(', field('path', $._expression), ')'),
      ),
    )),

    index_expression: $ => prec(PREC.ACCESS, seq(
      field('object', $._expression),
      '[',
      field('index', $._expression),
      ']',
    )),

    assignment: $ => prec.right(PREC.ASSIGN, seq(
      field('left', choice($.identifier, $.member_expression, $.index_expression)),
      ':=',
      field('right', $._expression),
    )),

    binary_expression: $ => {
      const table = [
        [PREC.LOGICAL, choice(kw('and'), kw('or'))],
        [PREC.COMPARE, choice('<', '>', '<=', '>=', '=', '<>')],
        [PREC.CONCAT, choice('&', '&&')],
        [PREC.ADD, choice('+', '-')],
        [PREC.MULTIPLY, choice('*', '/', kw('div'), kw('mod'))],
        [PREC.SHIFT, choice('<<', '>>')],
      ];
      return choice(...table.map(([p, operator]) => prec.left(p, seq(
        field('left', $._expression),
        field('operator', operator),
        field('right', $._expression),
      ))));
    },

    unary_expression: $ => choice(
      prec(PREC.NOT, seq(field('operator', kw('not')), field('operand', $._expression))),
      prec(PREC.UNARY, seq(field('operator', '-'), field('operand', $._expression))),
    ),

    exists_expression: $ => prec(PREC.EXISTS, seq(
      choice($.identifier, $.member_expression, $.index_expression, $.message_reference),
      kw('exists'),
    )),

    // receiver:message without arguments - only before exists
    message_reference: $ => prec(PREC.ACCESS, seq(
      optional(field('receiver', $._expression)),
      choice(':', ':?'),
      field('message', alias($.identifier, $.message_name)),
    )),

    call_expression: $ => prec(PREC.ACCESS, seq(
      field('function', $.identifier),
      field('arguments', $.argument_list),
    )),

    call_with_expression: $ => seq(
      kw('call'),
      field('function', $._expression),
      kw('with'),
      field('arguments', $.argument_list),
    ),

    send_expression: $ => prec(PREC.ACCESS, seq(
      optional(field('receiver', choice($._expression, $.inherited))),
      choice(':', ':?'),
      field('message', alias($.identifier, $.message_name)),
      field('arguments', $.argument_list),
    )),

    inherited: _ => kw('inherited'),

    argument_list: $ => seq('(', listOf($._expression, false), ')'),

    // The compiler drops a semicolon before else (TCompiler::GetToken
    // looks one token past it), which would need two tokens of lookahead
    // here; instead "; else" is lexed as one token.
    if_expression: $ => prec.right(PREC.BODY, seq(
      kw('if'),
      field('condition', $._expression),
      kw('then'),
      field('consequence', $._expression),
      optional(seq(
        choice(kw('else'), alias(token(prec(2, /;\s*[eE][lL][sS][eE]/)), 'else')),
        field('alternative', $._expression),
      )),
    )),

    loop_expression: $ => prec.right(PREC.BODY, seq(kw('loop'), field('body', $._expression))),

    for_expression: $ => prec.right(PREC.BODY, seq(
      kw('for'),
      field('variable', $.identifier),
      ':=',
      field('start', $._expression),
      kw('to'),
      field('end', $._expression),
      optional(seq(kw('by'), field('step', $._expression))),
      kw('do'),
      field('body', $._expression),
    )),

    foreach_expression: $ => prec.right(PREC.BODY, seq(
      kw('foreach'),
      optional(seq(field('slot', $.identifier), ',')),
      field('value', $.identifier),
      optional(kw('deeply')),
      kw('in'),
      field('collection', $._expression),
      // do, or collect - any symbol (withverb in the yacc grammar)
      choice(kw('do'), field('verb', $.identifier)),
      field('body', $._expression),
    )),

    while_expression: $ => prec.right(PREC.BODY, seq(
      kw('while'),
      field('condition', $._expression),
      kw('do'),
      field('body', $._expression),
    )),

    repeat_expression: $ => prec.right(PREC.BODY, seq(
      kw('repeat'),
      semiSep($._expression),
      kw('until'),
      field('condition', $._expression),
    )),

    function: $ => prec.right(PREC.BODY, seq(
      kw('func'),
      optional(choice(kw('native'), '+')),
      field('parameters', $.parameter_list),
      field('body', $._expression),
    )),

    parameter_list: $ => seq('(', commaSep($.parameter), ')'),

    // a parameter, optionally preceded by its type: (int x, y)
    parameter: $ => seq(
      optional(field('type', alias($.identifier, $.type))),
      field('name', $.identifier),
    ),

    try_expression: $ => prec.right(PREC.BODY, seq(
      kw('try'),
      semiSep($._expression),
      repeat1($.exception_handler),
    )),

    exception_handler: $ => prec.right(PREC.BODY, seq(
      kw('onexception'),
      field('exception', alias($.identifier, $.exception_name)),
      kw('do'),
      field('body', $._expression),
    )),

    local_declaration: $ => prec.right(seq(kw('local'), commaSep1($.variable_declarator))),

    constant_declaration: $ => prec.right(seq(kw('constant'), commaSep1($.constant_declarator))),

    variable_declarator: $ => prec.right(seq(
      optional(field('type', alias($.identifier, $.type))),
      field('name', $.identifier),
      optional(seq(':=', field('value', $._expression))),
    )),

    constant_declarator: $ => prec.right(seq(
      field('name', $.identifier),
      ':=',
      field('value', $._expression),
    )),

    break_expression: $ => prec.right(seq(kw('break'), optional($._expression))),

    return_expression: $ => prec.right(seq(kw('return'), optional($._expression))),

    array: $ => seq(
      '[',
      optional(seq(field('class', alias($.identifier, $.class_name)), ':')),
      listOf($._expression, true),
      ']',
    ),

    frame: $ => seq('{', listOf($.slot, true), '}'),

    slot: $ => seq(
      field('name', alias($.identifier, $.slot_name)),
      ':',
      field('value', $._expression),
    ),

    // ---------------------------------------------------------------
    // Literals

    _literal: $ => choice(
      $.nil,
      $.true,
      $.integer,
      $.real,
      $.character,
      $.string,
      $.magic_pointer,
      $.immediate,
      $.quoted,
    ),

    nil: _ => kw('nil'),
    true: _ => kw('true'),

    // decimal, or 0x hex; a real needs its point (1e5 is 1 and the
    // symbol e5, as the compiler reads it)
    integer: _ => token(choice(/[0-9]+/, /0[xX][0-9a-fA-F]*/)),
    real: _ => token(/[0-9]+\.[0-9]*([eE][+-]?[0-9]*)?/),

    // $c, $\n, $\t, $\\, $\xx, $\uxxxx
    character: _ => token(seq(
      '$',
      choice(
        /[^\\]/,
        /\\[nNtT\\]/,
        /\\[0-9a-fA-F]{2}/,
        /\\[uU][0-9a-fA-F]{4}/,
      ),
    )),

    // "...": \n, \t, \" and \\; \u starts and ends a run of hex
    // UniChars.  Strings separated only by white space are one string.
    string: $ => repeat1($._string_part),

    _string_part: $ => seq(
      '"',
      repeat(choice(
        alias(token.immediate(prec(1, /[^"\\]+/)), $.string_content),
        $.escape_sequence,
      )),
      token.immediate('"'),
    ),

    escape_sequence: _ => token.immediate(choice(
      /\\[uU]([0-9a-fA-F]{4})*\\[uU]/,
      /\\(.|\r?\n)/,
    )),

    // @n, a reference to the ROM's magic pointer table
    magic_pointer: _ => token(seq('@', /[0-9]+/)),

    // #1a3: any other immediate Ref, in hex - not NewtonScript, but how
    // the REP prints one and how romsrc writes one (romsrc.py's notation)
    immediate: _ => token(seq('#', /[0-9a-fA-F]+/)),

    // 'sexpr: a literal, its symbols not evaluated
    quoted: $ => seq('\'', $._quoted_value),

    _quoted_value: $ => choice(
      $.nil,
      $.true,
      $.character,
      $.string,
      $.magic_pointer,
      seq(optional('-'), choice($.integer, $.real)),
      alias($.quoted_path, $.symbol),
      alias($.quoted_array, $.array),
      alias($.quoted_frame, $.frame),
    ),

    quoted_path: $ => prec.right(seq($.identifier, repeat(seq('.', $.identifier)))),

    quoted_array: $ => seq(
      '[',
      optional(seq(field('class', alias($.identifier, $.class_name)), ':')),
      listOf($._quoted_value, true),
      ']',
    ),

    quoted_frame: $ => seq('{', listOf(alias($.quoted_slot, $.slot), true), '}'),

    quoted_slot: $ => seq(
      field('name', alias($.identifier, $.slot_name)),
      ':',
      field('value', $._quoted_value),
    ),

    // a symbol: letters, digits and underscores, or anything between bars
    identifier: _ => token(choice(
      /[A-Za-z_][A-Za-z0-9_]*/,
      /\|([^|\\]|\\.)*\|/,
    )),

    // ---------------------------------------------------------------
    // Extras

    comment: _ => token(choice(
      seq('//', /[^\r\n]*/),
      seq('/*', /[^*]*\*+([^/*][^*]*\*+)*/, '/'),
    )),

    // #line n "file"
    line_directive: _ => token(seq('#line', / [0-9]+ "[^"\r\n]*"/)),

    // romsrc's record lines: "@@ 0x3c5b25 [names]", "@@const name",
    // "@@main", "@@end" (tools/newton-rom/analysis/romsrc.py); not
    // NewtonScript, but the ROM's source tree is written in it.
    record_marker: _ => token(seq('@@', /[^\r\n]*/)),
  },
});
